--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>TDD Playerment</h1>
+    <label for="nombre">Nombre:</label><br>
+      <input type="text" id="nombre" name="nombre" required><br>
+      <br>
     <div id="proyectoContainer"></div>
 
     <div id="mainContainer">
