--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>TDD Playerment</h1>
-    <label for="nombre">Nombre:</label><br>
-      <input type="text" id="nombre" name="nombre" required><br>
+    <label for="nombre">Buscar:</label><br>
+      <input type="text" id="nombre" name="nombre" ><br>
       <br>
     <div id="proyectoContainer"></div>
 
