--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
     </form>
     </div>
 
+    <div id="myModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <div id="contenedorFormulario"></div>
+      </div>
+    </div>
+
     <script type="module" src="./src/presenter.js"></script>
   </body>
 </html>
