se agrego el boton de ver ranking

--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <input type="text" id="searchName" name="searchName" required><br>
     <button id="searchButton">Buscar</button><br>
     <div id="proyectoContainer"></div>
+    <button id="showRankingButton">Mostrar Ranking</button>
+
+  <!-- Contenedor del ranking -->
+  <div id="rankingContainer"></div>
+    
+
+
 
     <div id="mainContainer">
     <table>
